k8s/front-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-end
  namespace: ecommerce
  labels:
    app: front-end
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front-end
  template:
    metadata:
      labels:
        app: front-end
    spec:
      containers:
        - name: front-end
          image: kamran420/ecommerce-front:v1
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "1"
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: front-end
  namespace: ecommerce
  labels:
    app: front-end
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: front-end
