k8s/postgres-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: ecommerce
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "1"
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: db-init-sql
              mountPath: /docker-entrypoint-initdb.d/init.sql
              subPath: init.sql
            - name: db-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: db-init-sql
          configMap:
            name: db-init-sql-configmap
        - name: db-data
          persistentVolumeClaim:
            claimName: db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: ecommerce
  labels:
    app: postgres
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
  selector:
    app: postgres
